@@ -1,5 +1,14 @@
 2008-11-17  Geoffrey Garen  <ggaren@apple.com>
 
+        Not reviewed.
+        
+        Try to fix Windows build.
+
+        * API/APICast.h:
+        * runtime/ExecState.h:
+
+2008-11-17  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Sam Weinig.
         
         Moved VM/SamplingTool.* => bytecode/SamplingTool.*.
